Fix slider thumb vertical alignment on web
Added margin-top: -7px to center the 20px thumb on the 6px track.

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -121,6 +121,7 @@ input[type="range"]::-webkit-slider-thumb {
   border-radius: 50%;
   background: #b0b0ff;
   cursor: pointer;
+  margin-top: -7px;
 }
 
 input[type="range"]::-moz-range-thumb {
